--- a/build.gradle
+++ b/build.gradle
@@ -151,6 +151,7 @@ dependencies {
     modCompileOnly("mezz.jei:jei-${mc_version}-forge-api:${jei_version}")
     modLocalRuntime("mezz.jei:jei-${mc_version}-forge:${jei_version}")
 
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
 //    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.0"))
 //    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.0"))
