--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,13 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 
-parchment_minecraft_version=1.20.1
-parchment_mappings_version=2023.09.03
-
-minecraft_version=1.20.1
-mc_version=1.20.1
-jei_version=15.8.2.26
-
-minecraft_version_range=[1.20.1,1.21)
-forge_version=47.3.33
-forge_version_range=[47,)
-loader_version_range=[47,)
+parchment_minecraft_version=1.21.1
+parchment_mappings_version=2024.11.17
+minecraft_version=1.21.1
+minecraft_version_range=[1.21.1, 1.22)
+neo_version=21.1.215
+neo_version_range=[21.1.0,)
+loader_version_range=[4,)
 
 mod_id=panoramic_screenshot
 mod_name=Panoramic Screenshot
@@ -23,8 +19,5 @@ mod_version=1.0.0
 mod_group_id=com.xkball.panoramic_screenshot
 mod_authors=xkball
 mod_description=Add a client command: /screenshot, allows you to take high resolution normal/panoramic/skybox screenshots.
-loader_name=Forge
+loader_name=NeoForge
 release_name=Panoramic Screenshot
-
-mapping_channel=official
-mapping_version=1.20.1
