--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,1 @@
-public-f net.minecraft.client.gui.screens.TitleScreen f_96716_ # CUBE_MAP
+public-f net.minecraft.client.gui.screens.Screen PANORAMA
