--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,7 @@ plugins {
     id 'idea'
     id 'java-library'
     id 'maven-publish'
-    id 'net.neoforged.moddev' version '2.0.120'
-
+    id 'net.neoforged.moddev' version '2.0.139'
 }
 
 tasks.named('wrapper', Wrapper).configure {
@@ -51,7 +50,7 @@ neoForge {
             systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
         }
         data {
-            data()
+            clientData()
             programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
         }
         configureEach {
