--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,2 @@
-public-f net.minecraft.client.gui.screens.Screen PANORAMA
+public-f net.minecraft.client.renderer.GameRenderer panorama
+public-f net.minecraft.client.renderer.GameRenderer cubeMap
