--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,14 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 
-parchment_minecraft_version=1.21.1
-parchment_mappings_version=2024.11.17
-minecraft_version=1.21.1
-minecraft_version_range=[1.21.1, 1.22)
-neo_version=21.1.215
-neo_version_range=[21.1.0,)
+parchment_minecraft_version=1.21.11
+parchment_mappings_version=2025.12.20
+minecraft_version=1.21.11
+minecraft_version_range=[1.21.11, 1.22)
+mc_version=1.21.11
+jei_version=19.9.1.125
+neo_version=21.11.7-beta
+neo_version_range=[21.11.0,)
 loader_version_range=[4,)
 
 mod_id=panoramic_screenshot
